tests/invalid_ast_samples/57b88e20155b552e2db2f16eb52816bbe33d54239511c714d6f554d61176de09.py
from ast import Expr
from ast import Module
from ast import Yield

tree = Module(body=[Expr(value=Yield())], type_ignores=[])

# version: 3.12.0
#
# Source:
# yield
#
#
# Error:
#     SyntaxError("'yield' outside function", ('<file>', 1, 1, None, 1, 6))
